<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:prefixText="@string/dollar_sign"
        app:suffixText="@string/per_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/rate"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_to_all"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/btnApplyToAll"
        android:layout_marginLeft="12dp"/>
</LinearLayout>