<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="HH"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/bg_circle_green"
            android:layout_marginEnd="16dp"
            android:id="@+id/txtUserAva"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Henry Pharma"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:id="@+id/txtUserName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/orchard"
            android:layout_marginEnd="12dp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/orchard"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/txtOrchard"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/block"
            android:layout_marginEnd="12dp"
            android:gravity="center"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/orchard"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/txtBlock"
            android:gravity="center"/>
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/rate_type"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:text="@string/price_rate"
            android:backgroundTintMode="src_over"
            android:backgroundTint="@color/brown"
            android:textColor="@color/black"
            android:id="@+id/btnPriceRate"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:text="@string/wages"
            android:backgroundTintMode="src_over"
            android:backgroundTint="@color/brown"
            android:textColor="@color/black"
            android:id="@+id/btnPriceWage"/>
    </LinearLayout>
    <include
        layout="@layout/item_rate_edit"
        android:id="@+id/item_rate_edit"
        android:visibility="gone"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_name_will_be_paid"
        android:id="@+id/txtWagesLabel"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/containerRow"
        android:orientation="vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="18dp"

        android:id="@+id/bottomDivider"
        android:background="@color/brown"/>
</LinearLayout>